<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:ignore="VisualLintBounds">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Grade Entry"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,TextViewEdits" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:minHeight="48dp"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <ListView
        android:id="@+id/listViewProgramCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:choiceMode="singleChoice" />

    <EditText
        android:id="@+id/editTextGrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/grade"
        android:importantForAutofill="no"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/duration"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextFees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fees"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
